syntax = "proto3";
import "google/protobuf/timestamp.proto";
option java_multiple_files = true;
package generated.rating.library;

message FormulaRatingRequest {
  int32 formula_id = 1;
}

message FormulaRatingResponse {
  int32 formula_id = 1;
  int32 rating = 2;
}

service FormulaRatingService {
  // unary
  rpc getFormulaRating(FormulaRatingRequest) returns (FormulaRatingResponse) {};
}